--- a/helm/charts/services/amplication-git-push-webhook-service/values.yaml
+++ b/helm/charts/services/amplication-git-push-webhook-service/values.yaml
@@ -29,7 +29,7 @@ service:
 
 ingress:
   enabled: true
-  hostname: server.amplication.com
+  hostname: webhook.amplication.com
   path: /webhook
 
 postgres:
