delete unused values

--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -24,7 +24,7 @@ service:
   protocol: TCP
 ingress:
   enabled: true
-  hostname: server.amplication-dev.com
+  hostname: server.amplication.com
 
 secrets:
   GPC: ""
