--- a/helm/charts/services/amplication-git-push-webhook-service/values.yaml
+++ b/helm/charts/services/amplication-git-push-webhook-service/values.yaml
@@ -29,7 +29,7 @@ service:
 
 ingress:
   enabled: true
-  hostname: webhook.amplication.com
+  hostname: https://webhook.amplication.com
 
 postgres:
   install: false
