--- a/helm/charts/services/amplication-storage-gateway/Chart.yaml
+++ b/helm/charts/services/amplication-storage-gateway/Chart.yaml
@@ -1,38 +1,12 @@
 apiVersion: v2
-name: amplication
-description: A Helm chart for Amplication.
+name: amplication-storage-gateway
+description: A Helm chart for the amplication-storage-gateway component of Amplication.
 
 dependencies:
-- name: postgresql
-  alias: postgres
-  version: "10.16.2"
-  repository: "https://charts.bitnami.com/bitnami"
-  condition: postgres.install
-- name: amplication-client
-  version: "0.1.0"
-  repository: "file://../services/amplication-client"
+
 - name: base
   version: "0.1.0"
-  repository: "file://../base"  
-- name: amplication-server
-  version: "0.1.0"
-  repository: "file://../services/amplication-server"
-- name: cp-helm-charts
-  version: "0.6.1"
-  repository: "https://confluentinc.github.io/cp-helm-charts/"
-  condition: cp-helm-charts.enabled
-- name: amplication-git-pull-request-service
-  version: "0.1.0"
-  repository: "file://../services/amplication-git-pull-request-service"
-- name: amplication-git-pull-service
-  version: "0.1.0"
-  repository: "file://../services/amplication-git-pull-service"
-- name: amplication-git-push-webhook-service
-  version: "0.1.0"
-  repository: "file://../services/amplication-git-push-webhook-service"
-- name: amplication-storage-gateway
-  version: "0.1.0"
-  repository: "file://../services/amplication-storage-gateway"
+  repository: "file://../../base"
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
