--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -47,3 +47,8 @@ KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID = 'main-server-group'
 
+BASE_BUILDS_FOLDER= "/amplication-data/build-data"
+
+# Novu:
+NOVU_API_KEY=
+
