feat(amplication-client) novu notification ui component done

--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -9,3 +9,6 @@ REACT_APP_FEATURE_FLAGS="{}"
 
 REACT_APP_DATA_SOURCE="/graphql"
 REACT_APP_SERVER_URI=""
+
+# Novu
+REACT_APP_NOVU_APP_ID_FROM_ADMIN_PANEL=
