--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -7,6 +7,7 @@
     "@amplication/design-system": "^0.13.0",
     "@apollo/client": "3.3.16",
     "@extra-set/difference": "2.2.3",
+    "@novu/notification-center": "0.4.2",
     "@rooks/use-window-size": "3.6.0",
     "ajv-errors": "3.0.0",
     "capital-case": "1.0.4",
