add generate code script and demo input-data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,5 +86,8 @@
   },
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
   }
 }
