--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -16,7 +16,7 @@
     "test:watch": "jest --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "generate-test-data-service": "ts-node scripts/generate-test-data-service.ts generated",
-    "generate-code": "ts-node scripts/generate-code.ts input-data.json code-generation-result",
+    "generate-code": "ts-node scripts/generate-code.ts",
     "update-test-data-service-snapshot": "jest -u src/tests/create-data-service.spec.ts && jest -u src/tests/server"
   },
   "dependencies": {
