feat(amplication-server) build notification service with Novu and fix client userId

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -47,7 +47,7 @@ KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID = 'main-server-group'
 
-BASE_BUILDS_FOLDER= "/amplication-data/build-data"
+BASE_BUILDS_FOLDER=
 
 # Novu:
 NOVU_API_KEY=
