--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -59,7 +59,7 @@ postgres:
 amplication-client:
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-client
-    tag: "release-0-13-0" # Need to change for dev.
+    tag: "release-0-13-1" # Need to change for dev.
   service:
     hostname: app-dev.staging.amplication-dev.com
     certificatearn: arn:aws:acm:us-east-1:407256539111:certificate/bc3442ea-ddcb-4870-b4ba-79144e623d71
@@ -72,7 +72,7 @@ amplication-client:
 amplication-server:
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-server
-    tag: "release-0-13-0"
+    tag: "release-0-13-1"
   postgres:
     install: false
   ingress:
@@ -131,7 +131,7 @@ amplication-server:
 amplication-git-push-webhook-service:
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-push-webhook-service
-    tag: "release-0-13-0"
+    tag: "release-0-13-1"
   postgres:
     install: false
   ingress:
@@ -148,7 +148,7 @@ amplication-git-push-webhook-service:
 amplication-git-pull-service:
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service
-    tag: "release-0-13-0"
+    tag: "release-0-13-1"
   postgres:
     install: false
   pvc:
@@ -175,7 +175,7 @@ amplication-git-pull-service:
 amplication-git-pull-request-service:
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-request-service
-    tag: "release-0-13-0"
+    tag: "release-0-13-1"
   pvc:
     name: common-efs-claim
   config:
@@ -188,12 +188,18 @@ amplication-git-pull-request-service:
       GITHUB_APP_APP_ID: "195638"
 
 amplication-storage-gateway:
+  pvc:
+    name: common-efs-claim
   image:
     repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-storage-gateway
-    tag: "feature-add-services"
+    tag: "release-0-13-1"
   config:
     env:
       KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: storage-queue-client
       KAFKA_GROUP_ID: storage-server-group
       CHECK_USER_ACCESS_TOPIC: authorization.internal.can-access-build.request.0
+
+infra:
+  pvc:
+    name: common-efs-claim
