add postgress configuration

--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -34,7 +34,7 @@ amplication-server:
 
       #KAFKA
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -76,7 +76,7 @@ amplication-git-push-webhook-service:
     hostname: webhook-shimi.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -99,7 +99,7 @@ amplication-git-pull-service:
       GITHUB_APP_CLIENT_ID: "Iv1.88cfcc5cad0fab3e"
       GIT_DEFAULT_ORIGIN_NAME: origin
 
-      KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -110,7 +110,7 @@ amplication-git-pull-request-service:
     name: shimi-efs-claim
   config:
     env:
-      KAFKA_BROKERS: '["b-2.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092","b-1.amplication-useast1-s.0ne4zw.c22.kafka.us-east-1.amazonaws.com:9092"]'
+      KAFKA_BROKERS: '["amplication-shimi-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
