change postgres password

--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -47,8 +47,8 @@ pvc:
 # Postgresql Server
 postgres:
   install: false
-  postgresqlUsername: postgres
-  postgresPassword: postgres
+  auth:
+    postgresPassword: postgres
   db: amplication
   fullnameOverride: postgresql
   postgresql:
