changes postgres paramters

--- a/helm/charts/services/amplication-server/values.yaml
+++ b/helm/charts/services/amplication-server/values.yaml
@@ -45,15 +45,14 @@ pvc:
   name: efs-claim
 
 # Postgresql Server
-postgres:
+postgresql:
   install: false
   global:
     postgresql:
-      auth:
-        postgresPassword: postgres
-        username: postgres
-        password: postgres
-        database: amplication
+      replicationPassword: postgres
+      postgresqlUsername: postgres
+      postgresqlPassword: postgres
+      postgresqlDatabase: amplication
   fullnameOverride: postgresql
   image: groundnuty/k8s-wait-for:v1.3
   imagePullPolicy: Always
