--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -1,3 +1,15 @@
+# Postgresql Server
+postgresql:
+  install: false
+  postgresqlPassword: postgres
+  postgresqlPostgresPassword: postgres
+  postgresqlDatabase: amplication
+  fullnameOverride: postgresql
+  image: groundnuty/k8s-wait-for:v1.3
+  imagePullPolicy: Always
+  primary:
+    podLabels: { name: "postgres" }
+
 cp-helm-charts:
   enabled: true
   cp-kafka:
