--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -22,6 +22,7 @@ amplication-client:
       REACT_APP_SERVER_URI: "https://server-shimi.amplication-dev.com"
       REACT_APP_DATA_SOURCE: "https://server-shimi.amplication-dev.com/graphql"
       REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-shimi.amplication-dev.com/github"
+      REACT_APP_STORAGE_GATEWAY_URL: https://server-shimi.amplication-dev.com
 
 amplication-server:
   postgres:
