fix setup script and update dotenv files that use db

--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -3,8 +3,9 @@ KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_REPOSITORY_PUSH_QUEUE ="git.external.push.event.0"
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432
+POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=prisma
 POSTGRESQL_PASSWORD=topsecret
+SERVICE_DB_NAME=amplication-git-push-webhook-service
 
 PORT = 4567
