--- a/packages/amplication-prisma-db/.env
+++ b/packages/amplication-prisma-db/.env
@@ -1,5 +1,6 @@
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432
+POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=prisma
 POSTGRESQL_PASSWORD=topsecret
+SERVICE_DB_NAME=amplication-prisma-db
