--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -7,6 +7,7 @@ NODE_ENV=development
 POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432
 POSTGRESQL_USER=prisma
 POSTGRESQL_PASSWORD=topsecret
+SERVICE_DB_NAME=ampication-server
 
 # Nest 
 CORS_ENABLE=1
