--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -4,7 +4,7 @@ DEBUG_MODE=1
 NODE_ENV=development
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432
+POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=prisma
 POSTGRESQL_PASSWORD=topsecret
 SERVICE_DB_NAME=ampication-server
