new setup dev in progress

--- a/packages/amplication-prisma-db/.env
+++ b/packages/amplication-prisma-db/.env
@@ -1,6 +1,6 @@
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
-POSTGRESQL_USER=prisma
-POSTGRESQL_PASSWORD=topsecret
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
+POSTGRESQL_USER=admin
+POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication-prisma-db
