--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -3,9 +3,9 @@ KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_REPOSITORY_PUSH_QUEUE ="git.external.push.event.0"
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
-POSTGRESQL_USER=prisma
-POSTGRESQL_PASSWORD=topsecret
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
+POSTGRESQL_USER=admin
+POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication-git-push-webhook-service
 
 PORT = 4567
