--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -4,9 +4,9 @@ DEBUG_MODE=1
 NODE_ENV=development
 
 # Postgres
-POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432/${SERVICE_DB_NAME}
-POSTGRESQL_USER=prisma
-POSTGRESQL_PASSWORD=topsecret
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
+POSTGRESQL_USER=admin
+POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=ampication-server
 
 # Nest 
@@ -53,3 +53,4 @@ KAFKA_GROUP_ID = 'main-server-group'
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
 # BASE_BUILDS_FOLDER
+BASE_BUILDS_FOLDER=""
