--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -1,2 +1,2 @@
 # Kafka Topics
-GENERATE_PULL_REQUEST_TOPIC="git.pr.generate.message"
+GENERATE_PULL_REQUEST_TOPIC="git.internal.pull-request.request.1"
