--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -1,4 +1,10 @@
+# Network
+PORT = 4567
+
+# Secrets
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
+
+# Kafka
 KAFKA_BROKERS="["localhost:9092"]"
 KAFKA_REPOSITORY_PUSH_QUEUE ="git.external.push.event.0"
 
@@ -7,5 +13,3 @@ POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication-git-push-webhook-service
-
-PORT = 4567
