--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -1,7 +1,9 @@
-COMPOSE_PROJECT_NAME=amp_cl220fgz70085lfrorbovbv88
+# Network
+PORT=3002
+
+COMPOSE_PROJECT_NAME=amplication-storage-gateway
 JWT_SECRET_KEY=m&XAFzBpM3es
 JWT_EXPIRATION=2d
-PORT=3002
 
 # Kafka Topics
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
@@ -12,4 +14,4 @@ KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID = 'storage-server-group'
 
 # BASE_BUILDS_FOLDER 
-BASE_BUILDS_FOLDER=""
+BASE_BUILDS_FOLDER=[path-to-local-folder]
