--- a/ee/packages/amplication-git-pull-service/.env
+++ b/ee/packages/amplication-git-pull-service/.env
@@ -24,3 +24,6 @@ MAX_SNAPSHOTS=[place-your-max-snapshot-here]
 GIT_DEFAULT_ORIGIN_NAME=origin
 GITHUB_APP_APP_ID=[github-app-app-id]
 GITHUB_APP_PRIVATE_KEY=[github-app-private-key]
+
+# BASE_BUILDS_FOLDER 
+BASE_BUILDS_FOLDER=[path-to-local-folder]
