notification service - finished logic

--- a/packages/amplication-notifications-service/.env
+++ b/packages/amplication-notifications-service/.env
@@ -2,9 +2,9 @@ COMPOSE_PROJECT_NAME=amplication-notifications-service
 
 NODE_ENV=developement
 KAFKA_BROKERS=["localhost:9092"]
-KAFKA_CONSUMER_GROUP=
-KAFKA_CLIENT_ID=
+KAFKA_CLIENT_ID="notifications-queue-client"
+KAFKA_CONSUMER_GROUP="notifications-server-group"
 KAFKA_TOPIC="notification.internal.in-app-push.event.0"
 
 # Novu
-NOVU_API_KEY=
+NOVU_API_KEY=[novu-api-key]
