update readme and prettier

--- a/packages/amplication-notifications-service/.env
+++ b/packages/amplication-notifications-service/.env
@@ -1,6 +1,6 @@
 COMPOSE_PROJECT_NAME=amplication-notifications-service
+NODE_ENV=development
 
-NODE_ENV=developement
 KAFKA_BROKERS=["localhost:9092"]
 KAFKA_CLIENT_ID="notifications-queue-client"
 KAFKA_CONSUMER_GROUP="notifications-server-group"
