change action build step to install

--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -30,7 +30,7 @@ jobs:
           fetch-depth: 0
       - name: build action
         working-directory: .github/actions/get-services-hash
-        run: npm run build
+        run: npm install
 #      - name: get changed files (not pr)
 #        if: github.event_name != 'pull_request'
 #        id: changed-files-not-pr
