--- a/.github/actions/get-services-hash/package.json
+++ b/.github/actions/get-services-hash/package.json
@@ -40,6 +40,7 @@
     "eslint": "8.17.0",
     "prettier": "2.7.1",
     "ts-node": "10.8.1",
+    "tslib": "^2.4.0",
     "typescript": "4.7.3"
   }
 }
