--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -112,12 +112,103 @@ jobs:
       matrix:
         service-hash-data: ${{ fromJson(needs.changes.outputs.hashes) }}
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+
       - name: Get the output time
         run: echo "The step output ${{ toJson(matrix.service-hash-data) }}"
 
+      - name: Get the output time
+        run: echo "The step output ${{ toJson(matrix.service-hash-data).folder }}"
+
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Check if repo exist
+        env:
+          REPOSITORY_NAME: ${{ toJson(matrix.service-hash-data).folder }}"
+        run: echo $REPOSITORY_NAME
+#        run: aws ecr describe-repositories --repository-names $REPOSITORY_NAME || aws ecr create-repository --repository-name $REPOSITORY_NAME
+
+      - name: set branch-name
+        run: echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/[^a-zA-Z0-9]/-/g")" >> $GITHUB_ENV
+
+#      - name: Check if tag already exist
+#        id: tag-exist
+#        run: |
+#          set +e
+#          cmd="$(aws ecr describe-images --repository-name=$ECR_REPOSITORY --image-ids=imageTag=$GITHUB_HASH)"
+#          if [[ ! -z "$cmd" ]]
+#          then
+#            echo "tag already exist"
+#            echo "::set-output name=tag_exist::true"
+#            cmd="$(aws ecr describe-images --repository-name=$ECR_REPOSITORY --image-ids=imageTag=$BRANCH_NAME)"
+#            if [[ ! -z "$cmd" ]]
+#            then
+#              echo "tag already exist (branch)"
+#            else
+#              echo "tag doesn't exist (branch)"
+#              export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
+#              sh .github/workflows/scripts/ecr_retag.sh
+#            fi
+#          else
+#            echo "tag doesn't exist"
+#            echo "::set-output name=tag_exist::false"
+#          fi
+#        env:
+#          TAG_LIST: "${{ env.BRANCH_NAME }}"
+#
+#      - name: Build, tag, and push image to Amazon ECR
+#        if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
+#        env:
+#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#          TAG_LIST: "${{ github.run_id }},${{ github.sha }},${{ env.BRANCH_NAME }}"
+#        run: |
+#          echo "Will work from: $SERVICE_FOLDER"
+#          Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
+#          echo "Docker_image: $Docker_image"
+#          command="docker build -f $SERVICE_FOLDER/Dockerfile . -t $Docker_image"
+#          echo "$command"
+#          $command
+#          docker push $Docker_image
+#          export MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
+#          echo "MANIFEST: $MANIFEST"
+#          sh .github/workflows/scripts/ecr_retag.sh
+#      - name: Discord notification
+#        if: failure()
+#        uses: Ilshidur/action-discord@0.3.2
+#        env:
+#          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
+#          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ env.BRANCH_NAME }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"}]}]'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
 #  tests:
 #    runs-on: ubuntu-20.04
